--- a/app/src/main/res/navigation/chats_nav.xml
+++ b/app/src/main/res/navigation/chats_nav.xml
@@ -35,4 +35,9 @@
         android:name="com.example.chatapp.SettingFragment"
         android:label="fragment_setting"
         tools:layout="@layout/fragment_setting" />
+    <fragment
+        android:id="@+id/chatFragment"
+        android:name="com.example.chatapp.chatFragment"
+        android:label="fragment_chat"
+        tools:layout="@layout/fragment_chat" />
 </navigation>
