--- a/app/src/main/res/drawable-v24/receiver_shape.xml
+++ b/app/src/main/res/drawable-v24/receiver_shape.xml
@@ -2,9 +2,10 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="#C62C2C2C"/>
-    <corners android:topRightRadius="5dp"
-        android:bottomRightRadius="5dp"
-        android:bottomLeftRadius="5dp"/>
+    <solid android:color="#121212"/>
+    <corners
+        android:topRightRadius="20dp"
+        android:bottomRightRadius="20dp"
+        android:topLeftRadius="20dp"/>
 
 </shape>
