--- a/app/src/main/res/drawable/background_chat_input.xml
+++ b/app/src/main/res/drawable/background_chat_input.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="#ED050F3C"/>
+    <solid android:color="#142232"/>
     <corners android:radius="28dp"/>
 
 </shape>
