--- a/app/src/main/res/layout/item_online.xml
+++ b/app/src/main/res/layout/item_online.xml
@@ -2,8 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_marginLeft="7dp"
-    android:layout_marginRight="7dp">
+    android:layout_marginLeft="6dp"
+    android:layout_marginRight="6dp">
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -19,6 +19,8 @@
             android:id="@+id/userName"
             android:layout_width="60dp"
             android:layout_height="20dp"
+            android:ellipsize="end"
+            android:singleLine="true"
             android:text="user name"
             android:layout_below="@+id/UserImage"
             android:layout_centerHorizontal="true"
