--- a/app/src/main/res/layout/sender_item.xml
+++ b/app/src/main/res/layout/sender_item.xml
@@ -1,30 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_marginTop="4dp"
+    android:padding="4dp">
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/image"
         android:layout_width="25dp"
         android:layout_height="25dp"
-        android:layout_centerVertical="true"
-        android:layout_gravity="center"
+        android:layout_marginEnd="4dp"
         android:background="@drawable/profile"
-        android:layout_alignParentRight="true"
-        android:layout_margin="5dp"
-        android:layout_marginTop="10dp"/>
+        android:scaleType="centerCrop"
+        app:layout_constraintBottom_toBottomOf="@id/txtMessage"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintVertical_bias="1.0" />
 
     <TextView
         android:id="@+id/txtMessage"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="sender item"
-        android:textColor="@color/white"
-        android:layout_centerVertical="true"
-        android:layout_toLeftOf="@+id/image"
-        android:layout_margin="5dp"
+        android:layout_marginEnd="4dp"
+        android:layout_marginRight="4dp"
+        app:layout_constraintWidth_max="wrap"
         android:background="@drawable/sender_shape"
-        android:padding="7dp"
-        android:textStyle="bold"/>
+        android:padding="12dp"
+        android:textColor="@color/white"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toStartOf="@id/image"
+        app:layout_constraintWidth_percent="0.7" />
 
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
