--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -74,6 +74,13 @@
         android:layout_margin="2dp"
         android:layout_height="wrap_content">
 
+        <ImageButton
+            android:id="@+id/imageBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_baseline_attach_file_24"
+            android:backgroundTint="@color/white"/>
+
         <EditText
             android:id="@+id/edtMessage"
             android:layout_weight="1"
