Hau update code final

--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -3,8 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".View.chatFragment"
-    android:background="#1C2E46">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context=".chatFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <LinearLayout
@@ -43,7 +43,7 @@
                 android:layout_height="wrap_content"
                 android:text="User receive name"
                 android:gravity="start"
-                android:textColor="#ffff"
+                android:textColor="#000"
                 android:textSize="18dp"
                 android:textStyle="bold"></TextView>
 
@@ -53,7 +53,7 @@
                 android:layout_height="wrap_content"
                 android:text="Offline"
                 android:gravity="start"
-                android:textColor="#9AFFFFFF"
+                android:textColor="#D2000000"
                 android:textSize="13dp"></TextView>
         </LinearLayout>
 
@@ -64,17 +64,22 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_above="@id/ll3"
-        android:layout_below="@+id/ll1"
-        android:background="@drawable/chat_container"
-        android:padding="8dp" />
+        android:layout_below="@+id/ll1" />
 
     <LinearLayout
         android:id="@+id/ll3"
         android:layout_alignParentBottom="true"
         android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_margin="4dp"
+        android:layout_margin="2dp"
         android:layout_height="wrap_content">
+
+        <ImageButton
+            android:id="@+id/imageBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_baseline_attach_file_24"
+            android:backgroundTint="@color/white"/>
 
         <EditText
             android:id="@+id/edtMessage"
