--- a/app/src/main/res/drawable/sender_shape.xml
+++ b/app/src/main/res/drawable/sender_shape.xml
@@ -2,9 +2,9 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="#142232"/>
-    <corners
-        android:topRightRadius="20dp"
-        android:bottomLeftRadius="20dp"
-        android:topLeftRadius="20dp"/>
+    <solid android:color="#ED050F3C"/>
+    <corners android:topLeftRadius="5dp"
+        android:bottomRightRadius="5dp"
+        android:bottomLeftRadius="5dp"/>
+
 </shape>
