--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".View.LoginFragment"
+    tools:context=".LoginFragment"
     android:orientation="vertical"
     android:paddingLeft="20dp"
     android:paddingRight="20dp"
