--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".View.SettingFragment">
+    tools:context=".SettingFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <ImageButton
