--- a/app/src/main/res/layout/sender_item.xml
+++ b/app/src/main/res/layout/sender_item.xml
@@ -1,34 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginTop="4dp"
-    android:padding="4dp">
+    android:layout_height="wrap_content">
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/image"
         android:layout_width="25dp"
         android:layout_height="25dp"
-        android:layout_marginEnd="4dp"
+        android:layout_centerVertical="true"
+        android:layout_gravity="center"
         android:background="@drawable/profile"
-        android:scaleType="centerCrop"
-        app:layout_constraintBottom_toBottomOf="@id/txtMessage"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintVertical_bias="1.0" />
+        android:layout_alignParentRight="true"
+        android:layout_margin="5dp"
+        android:layout_marginTop="10dp"/>
 
     <TextView
         android:id="@+id/txtMessage"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="4dp"
-        android:layout_marginRight="4dp"
-        app:layout_constraintWidth_max="wrap"
-        android:background="@drawable/sender_shape"
-        android:padding="12dp"
+        android:text="sender item"
         android:textColor="@color/white"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toStartOf="@id/image"
-        app:layout_constraintWidth_percent="0.7" />
+        android:layout_centerVertical="true"
+        android:layout_toLeftOf="@+id/image"
+        android:layout_margin="5dp"
+        android:background="@drawable/sender_shape"
+        android:padding="7dp"
+        android:textStyle="bold"/>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
