--- a/app/src/main/res/layout/receiver_item.xml
+++ b/app/src/main/res/layout/receiver_item.xml
@@ -7,12 +7,12 @@
         android:id="@+id/image"
         android:layout_width="25dp"
         android:layout_height="25dp"
-        android:layout_centerVertical="true"
         android:layout_gravity="center"
-        android:background="@drawable/profile"
-        android:layout_alignParentLeft="true"
-        android:layout_margin="5dp"
-        android:layout_marginTop="10dp"/>
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginEnd="5dp"
+        android:layout_marginBottom="5dp"
+        android:background="@drawable/profile" />
 
     <TextView
         android:id="@+id/txtMessage"
@@ -20,11 +20,23 @@
         android:layout_height="wrap_content"
         android:text="receive item"
         android:textColor="@color/white"
-        android:layout_centerVertical="true"
         android:layout_toRightOf="@+id/image"
         android:layout_margin="5dp"
         android:background="@drawable/receiver_shape"
         android:padding="7dp"
-        android:textStyle="bold"/>
+        android:textStyle="bold"
+
+        />
+
+    <ImageView
+        android:id="@+id/messageIv"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_marginLeft="25dp"
+        android:adjustViewBounds="true"
+        android:background="@drawable/ic_baseline_image"
+        android:padding="15dp"
+        android:scaleType="fitCenter"
+        android:src="@drawable/receiver_shape" />
 
 </RelativeLayout>
